@startuml

title __IHM's Package Diagram__\n

  namespace  java{
    namespace ihm {
      class ihm.App {
          + App()
      }
    }
  }
  

  namespace java {
    namespace ihm {
      class ihm.MyFrame {
          + MyFrame()
      }
    }
  }
  

  namespace java {
    namespace ihm {
      class ihm.MyPane {
          {static} + dim : Dimension
          {static} - gb : GridBagLayout
          {static} - gbc : GridBagConstraints
          + MyPane()
          - buildEachRows()
          - buildField()
          - buildFormRow()
          - identifyType()
      }
    }
  }
  

  namespace  java{
    namespace ihm {
      class ihm.MyTabs {
          {static} + dim : Dimension
          {static} - gb : GridBagLayout
          {static} - gbc : GridBagConstraints
          + MyTabs()
          - buildEachRows()
          - buildField()
          - buildFormRow()
          - identifyType()
      }
    }
  }
  

  namespace java {
    namespace ihm {
      class ihm.My_ButtonPlus {
          + My_ButtonPlus()
      }
    }
  }
  

  ihm.App o-- api.ApiStructuresExtractor : structures
  ihm.MyFrame -up-|> javax.swing.JFrame
  ihm.MyPane -up-|> javax.swing.JPanel
  ihm.MyPane o-- api.ApiStructuresExtractor : structures
  ihm.MyPane o-- ihm.MyTabs : tabs
  ihm.MyTabs -up-|> javax.swing.JTabbedPane
  ihm.MyTabs o-- api.ApiStructuresExtractor : structures
  ihm.My_ButtonPlus -up-|> javax.swing.JButton


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
